carta-kubernetes/carta-ingress-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carta-shared-fs
  labels:
    run: carta-shared-fs
spec:
  ports:
  - port: 80
    targetPort: 3002
    protocol: TCP
  selector:
    run: carta-shared-fs
